# Terms-Conditions-Comparison

./: .gitignore  1_exploration.ipynb  1_summarise.ipynb  2_compare_summaries.ipynb  2_summarise_clean.ipynb  2_summarize.ipynb  3_standardising.ipynb  4_huggingface_models.ipynb  5_traditional_methods.ipynb  6_summary_metrics.ipynb  README.md  Simmons Wavelength Data Science LLM technical task.docx  compare_summaries.py  create_summaries.py  map_reduce_summarized_2015.txt  map_reduce_summarized_2023.txt  pyproject.toml  standardisation.py  summarized_2015.txt  summarized_2023.txt  vectors_summarized_2015.txt  vectors_summarized_2023.txt
data/raw/: Jan 2015.docx  Mar 2023.docx
data/reduced/: Jan 2015_reduced.docx
data/sections/: Jan 2015_sections.docx
data/standardisation/: gpt35_standardisation_advice.txt  gpt4_standardisation_advice.txt
data/summaries/: 2015_sections_summary.txt  2023_sections_summary.txt  bart_large_2015_summary.txt  bart_large_2023_summary.txt  bloom_2015_summary.txt  davinci_map_reduce_summarized_2015.txt  davinci_map_reduce_summarized_2023.txt  gpt4_map_reduce_summarized_2015.txt  gpt4_map_reduce_summarized_2023.txt  vector_2015_summary.txt  vector_2023_summary.txt
data/summary_comparison/: document_comparison_output.txt  prompt_engineering_output_gpt.txt  (+1 more)
figures/: tsne_2015_fig.html  tsne_2023_fig.html
prompts_templates/: document_comparison_prompt.txt  map_template.txt  prompt_engineering_comparison_prompt.txt  reduce_template.txt  standardisation_prompt.txt
superseded/: 1_exploration.ipynb  2_summarize.ipynb  compare_summaries.ipynb
